fix layout issues

--- a/css/components/projetos.css
+++ b/css/components/projetos.css
@@ -1,5 +1,5 @@
 /*gerais*/
-ul, p {
+  ul, p {
     margin: 0px;
   }
   
@@ -35,8 +35,7 @@ ul, p {
   .container {
     box-sizing: border-box;
     max-width: 1200px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0px 20px 0px 20px ;
     margin-left: auto;
     margin-right: auto;
   }
